--- a/index.html
+++ b/index.html
@@ -198,29 +198,120 @@
             </svg>  
           </a>
         </div>
-        <!-- вот тут будет использоваться swiper -->
-        <div class="housing-programs__list">
-          <!-- вот так примерно будет выглядеть карточка одна -->
-           <!-- их будет 4 штуки видны, остальные скрыты пока не переключит-->
-          <div class="housing-programs__item">
-            <div class="housing-programs__item-image">
-              <img src="./src/assets/img/housing_1.png" alt="">
-              <div class="housing-programs__item-filter"></div>
-              <svg class="housing-programs__item-arrow" width="40" height="40" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>  
+        <div class="slider-wrapper">
+          <div class="housing-programs__list swiper housing-swiper">
+            <div class="swiper-wrapper">
+              <div class="housing-programs__item swiper-slide">
+                <div class="housing-programs__item-image">
+                  <img src="./src/assets/img/housing_1.png" alt="">
+                  <div class="housing-programs__item-filter"></div>
+                  <svg class="housing-programs__item-arrow" width="40" height="40" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>  
+                </div>
+                <div class="housing-programs__item-content">
+                  <h3 class="housing-programs__item-title">
+                    Программа «Elorda zhastary»
+                  </h3>
+                  <p class="housing-programs__item-description">
+                    Льготная ипотечная программа предназначена для работающей молодежи до 35 лет, осуществляющих трудовую деятельность в определенных сферах
+                  </p>
+                  <a href="#" class="housing-programs__item-link">
+                    <span class="housing-programs__item-link-text">Подробнее</span>
+                  </a>
+                </div>
+              </div>
+              <div class="housing-programs__item swiper-slide">
+                <div class="housing-programs__item-image">
+                  <img src="./src/assets/img/housing_1.png" alt="">
+                  <div class="housing-programs__item-filter"></div>
+                  <svg class="housing-programs__item-arrow" width="40" height="40" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>  
+                </div>
+                <div class="housing-programs__item-content">
+                  <h3 class="housing-programs__item-title">
+                    Программа «Elorda zhastary»
+                  </h3>
+                  <p class="housing-programs__item-description">
+                    Льготная ипотечная программа предназначена для работающей молодежи до 35 лет, осуществляющих трудовую деятельность в определенных сферах
+                  </p>
+                  <a href="#" class="housing-programs__item-link">
+                    <span class="housing-programs__item-link-text">Подробнее</span>
+                  </a>
+                </div>
+              </div>
+              <div class="housing-programs__item swiper-slide">
+                <div class="housing-programs__item-image">
+                  <img src="./src/assets/img/housing_1.png" alt="">
+                  <div class="housing-programs__item-filter"></div>
+                  <svg class="housing-programs__item-arrow" width="40" height="40" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>  
+                </div>
+                <div class="housing-programs__item-content">
+                  <h3 class="housing-programs__item-title">
+                    Программа «Elorda zhastary»
+                  </h3>
+                  <p class="housing-programs__item-description">
+                    Льготная ипотечная программа предназначена для работающей молодежи до 35 лет, осуществляющих трудовую деятельность в определенных сферах
+                  </p>
+                  <a href="#" class="housing-programs__item-link">
+                    <span class="housing-programs__item-link-text">Подробнее</span>
+                  </a>
+                </div>
+              </div>
+              <div class="housing-programs__item swiper-slide">
+                <div class="housing-programs__item-image">
+                  <img src="./src/assets/img/housing_1.png" alt="">
+                  <div class="housing-programs__item-filter"></div>
+                  <svg class="housing-programs__item-arrow" width="40" height="40" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>  
+                </div>
+                <div class="housing-programs__item-content">
+                  <h3 class="housing-programs__item-title">
+                    Программа «Elorda zhastary»
+                  </h3>
+                  <p class="housing-programs__item-description">
+                    Льготная ипотечная программа предназначена для работающей молодежи до 35 лет, осуществляющих трудовую деятельность в определенных сферах
+                  </p>
+                  <a href="#" class="housing-programs__item-link">
+                    <span class="housing-programs__item-link-text">Подробнее</span>
+                  </a>
+                </div>
+              </div>
+              <div class="housing-programs__item swiper-slide">
+                <div class="housing-programs__item-image">
+                  <img src="./src/assets/img/housing_1.png" alt="">
+                  <div class="housing-programs__item-filter"></div>
+                  <svg class="housing-programs__item-arrow" width="40" height="40" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>  
+                </div>
+                <div class="housing-programs__item-content">
+                  <h3 class="housing-programs__item-title">
+                    Программа «Elorda zhastary»
+                  </h3>
+                  <p class="housing-programs__item-description">
+                    Льготная ипотечная программа предназначена для работающей молодежи до 35 лет, осуществляющих трудовую деятельность в определенных сферах
+                  </p>
+                  <a href="#" class="housing-programs__item-link">
+                    <span class="housing-programs__item-link-text">Подробнее</span>
+                  </a>
+                </div>
+              </div>
             </div>
-            <div class="housing-programs__item-content">
-              <h3 class="housing-programs__item-title">
-                Программа «Elorda zhastary»
-              </h3>
-              <p class="housing-programs__item-description">
-                Льготная ипотечная программа предназначена для работающей молодежи до 35 лет, осуществляющих трудовую деятельность в определенных сферах
-              </p>
-              <a href="#" class="housing-programs__item-link">
-                <span class="housing-programs__item-link-text">Подробнее</span>
-              </a>
-            </div>
+          </div>
+          <div class="housing-swiper-button-prev">
+            <svg class="housing-swiper-button-icon" width="8" height="11" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0.999999 1L4 4L1 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>              
+          </div>
+          <div class="housing-swiper-button-next">
+            <svg class="housing-swiper-button-icon" width="8" height="11" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0.999999 1L4 4L1 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>  
           </div>
         </div>
       </section>
@@ -285,53 +376,82 @@
         </div>
       </section>
 
-      <section class="info adaptive">
+      <section class="info">
         <h2 class="info__title">
             Информация
         </h2>
-        <!-- вот тут будет слайдер от swiper -->
-        <div class="info__content">
-          <div class="info__item">
-            <div class="info__item-background"></div>
-            <div class="info__item-content">
-              <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
-                <a href="#" class="info__item-link">
-                  <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
-                </a>
-            </div>
-          </div>
+        <div class="slider-wrapper">
+          <div class="info__content swiper info-swiper">
+            <div class="swiper-wrapper ">
+              <div class="swiper-slide">
+                <div class="info__item">
+                  <div class="info__item-background"></div>
+                  <div class="info__item-content">
+                    <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
+                      <a href="#" class="info__item-link">
+                        <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
+                      </a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="info__item">
+                  <div class="info__item-background"></div>
+                  <div class="info__item-content">
+                    <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
+                      <a href="#" class="info__item-link">
+                        <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
+                      </a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="info__item">
+                  <div class="info__item-background"></div>
+                  <div class="info__item-content">
+                    <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
+                      <a href="#" class="info__item-link">
+                        <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
+                      </a>
+                  </div>
+                </div>  
+              </div>
+              <div class="swiper-slide">
+                <div class="info__item">
+                    <div class="info__item-background"></div>
+                    <div class="info__item-content">
+                      <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
+                      <a href="#" class="info__item-link">
+                        <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
+                      </a>
+                    </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="info__item">
+                  <div class="info__item-background"></div>
+                  <div class="info__item-content">
+                    <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
+                      <a href="#" class="info__item-link">
+                        <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
+                      </a>
+                  </div>
+                </div>
+              </div>
 
-          <div class="info__item">
-            <div class="info__item-background"></div>
-            <div class="info__item-content">
-              <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
-                <a href="#" class="info__item-link">
-                  <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
-                </a>
             </div>
+          </div>    
+          <div class="info-swiper-button-prev">
+            <svg class="info-swiper-button-icon" width="8" height="11" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0.999999 1L4 4L1 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>              
           </div>
-
-          <div class="info__item">
-            <div class="info__item-background"></div>
-            <div class="info__item-content">
-              <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
-                <a href="#" class="info__item-link">
-                  <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
-                </a>
-            </div>
-          </div>
-
-          <div class="info__item">
-            <div class="info__item-background"></div>
-            <div class="info__item-content">
-              <img src="./src/assets/img/info_1.png" alt="info-image" class="info__item-image">
-                <a href="#" class="info__item-link">
-                  <h3 class="info__item-title">Список граждан, восстановленных в очереди за 2019-2023 г.г.</h3>
-                </a>
-            </div>
+          <div class="info-swiper-button-next">
+            <svg class="info-swiper-button-icon" width="8" height="11" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0.999999 1L4 4L1 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>  
           </div>
         </div>
-
       </section>
     </main>
     <footer class="footer">
@@ -394,6 +514,6 @@
       </div>
     </footer>
     <!-- <div id="app"></div> -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
