--- a/src/housing/index.html
+++ b/src/housing/index.html
@@ -121,7 +121,6 @@
 
       <main class="main adaptive">
         <section class="housing-programs">
-            <div class="housing-programs__container">
                 <h1 class="housing-programs__title">Жилищные программы</h1>
                 <div class="housing-programs__list">
                     <div class="housing-programs__item">
@@ -186,52 +185,50 @@
                         </div>
                       </div>
                 </div>
-            </div>
         </section>
 
         <section class="faq">
             <div class="faq__container">
-               
                 <h1 class="faq__title">Часто задаваемые вопросы</h1>
                 <div class="accordion accordion--faq">
                     <div class="accordion__item">
                         <div class="accordion__header">
-                            <h2 class="accordion__title">Кто имеет право на получение жилья от государства?</h2>
+                            <h2 class="accordion__item-title">Кто имеет право на получение жилья от государства?</h2>
                             <button class="accordion__btn">
                             <svg class="accordion__btn-arrow" width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M9 1L5 5L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             </button>
                         </div>
-                        <div class="accordion__content">
+                        <div class="accordion__body">
                             - ветераны Великой Отечественной войны; - дети-сироты, дети, оставшиеся без попечения родителей; - многодетные матери, награжденным подвесками «Алтын алқа», «Күміс алқа» или получившим ранее звание «Мать-героиня», а также награжденные орденами «Материнская слава» I и II степени, многодетные семьи. - социально уязвимые слои населения - государственные служащие, работники бюджетных организаций, военнослужащие, кандидаты в космонавты, космонавты, сотрудники специальных государственных органов и лица, занимающие государственные выборные должности; - граждане Республики Казахстан, единственное жилище которых признано аварийным в порядке, установленном законодательством Республики Казахстан.
                         </div>
                     </div>
 
                     <div class="accordion__item">
                         <div class="accordion__header">
-                            <h2 class="accordion__title">Кто имеет право на получение жилья от государства?</h2>
+                            <h2 class="accordion__item-title">Кто имеет право на получение жилья от государства?</h2>
                             <button class="accordion__btn">
                             <svg class="accordion__btn-arrow" width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M9 1L5 5L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             </button>
                         </div>
-                        <div class="accordion__content">
+                        <div class="accordion__body">
                             - ветераны Великой Отечественной войны; - дети-сироты, дети, оставшиеся без попечения родителей; - многодетные матери, награжденным подвесками «Алтын алқа», «Күміс алқа» или получившим ранее звание «Мать-героиня», а также награжденные орденами «Материнская слава» I и II степени, многодетные семьи. - социально уязвимые слои населения - государственные служащие, работники бюджетных организаций, военнослужащие, кандидаты в космонавты, космонавты, сотрудники специальных государственных органов и лица, занимающие государственные выборные должности; - граждане Республики Казахстан, единственное жилище которых признано аварийным в порядке, установленном законодательством Республики Казахстан.
                         </div>
                     </div>
 
                     <div class="accordion__item">
-                        <div class="accordion__header">
-                            <h2 class="accordion__title">Кто имеет право на получение жилья от государства?</h2>
+                        <div class="accordion__header ">
+                            <h2 class="accordion__item-title">Кто имеет право на получение жилья от государства?</h2>
                             <button class="accordion__btn">
                             <svg class="accordion__btn-arrow" width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M9 1L5 5L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             </button>
                         </div>
-                        <div class="accordion__content">
+                        <div class="accordion__body">
                             - ветераны Великой Отечественной войны; - дети-сироты, дети, оставшиеся без попечения родителей; - многодетные матери, награжденным подвесками «Алтын алқа», «Күміс алқа» или получившим ранее звание «Мать-героиня», а также награжденные орденами «Материнская слава» I и II степени, многодетные семьи. - социально уязвимые слои населения - государственные служащие, работники бюджетных организаций, военнослужащие, кандидаты в космонавты, космонавты, сотрудники специальных государственных органов и лица, занимающие государственные выборные должности; - граждане Республики Казахстан, единственное жилище которых признано аварийным в порядке, установленном законодательством Республики Казахстан.
                         </div>
                     </div>
@@ -260,10 +257,12 @@
                         <h3 class="schedule__item-time-title">Понедельник с 16.00 до 18.00 </h3>
                     </div>
                     <button class="schedule__item-btn">
-                        <span class="schedule__item-btn-text">Записаться</span>
-                        <svg class="schedule__item-btn-arrow" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                        <div class="schedule__item-btn-container">
+                          <span class="schedule__item-btn-text">Записаться</span>
+                          <svg class="schedule__item-btn-arrow" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                        </div>
                     </button>
                 </div>
 
@@ -277,10 +276,12 @@
                         <h3 class="schedule__item-time-title">Понедельник с 16.00 до 18.00 </h3>
                     </div>
                     <button class="schedule__item-btn">
+                      <div class="schedule__item-btn-container">
                         <span class="schedule__item-btn-text">Записаться</span>
                         <svg class="schedule__item-btn-arrow" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
+                      </div>
                     </button>
                 </div>
 
@@ -294,10 +295,12 @@
                         <h3 class="schedule__item-time-title">Понедельник с 16.00 до 18.00 </h3>
                     </div>
                     <button class="schedule__item-btn">
+                      <div class="schedule__item-btn-container">
                         <span class="schedule__item-btn-text">Записаться</span>
                         <svg class="schedule__item-btn-arrow" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
+                      </div>
                     </button>
                 </div>
 
@@ -311,14 +314,19 @@
                         <h3 class="schedule__item-time-title">Понедельник с 16.00 до 18.00 </h3>
                     </div>
                     <button class="schedule__item-btn">
+                      <div class="schedule__item-btn-container">
                         <span class="schedule__item-btn-text">Записаться</span>
                         <svg class="schedule__item-btn-arrow" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M8.5 16L16.5 8M16.5 8H10.5M16.5 8V14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
+                      </div>
                     </button>
                 </div>
             </div>
       </section>
+
+      
+
 
       <footer class="footer">
         <div class="footer__wrapper adaptive"> 
@@ -354,15 +362,17 @@
                     <span class="footer__info-item footer__info-item--green">+7 (7172) 28-09-59</span>
                   </div>
                 </div>
-                <div class="schedule">
-                  <div class="schedule__item">
-                    <img src="../assets/icons/calendar.svg" alt="calendar">
+                <div class="footer__schedule">
+                  <div class="footer__schedule-item">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M10 5V10H15M10 19C5.02944 19 1 14.9706 1 10C1 5.02944 5.02944 1 10 1C14.9706 1 19 5.02944 19 10C19 14.9706 14.9706 19 10 19Z" stroke="#3B3E4F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                     <span>График приема документов: Пн-Пт 08:30-17:00</span>
                   </div>
-                  <div class="schedule__item">
+                  <div class="footer__schedule-item">
                     <span>Перерыв: 13:00-14:30</span>
                   </div>
-                  <div class="schedule__item">
+                  <div class="footer__schedule-item">
                     <span>График работы: Пн-Пт 08:30-18:00</span>
                   </div>
                 </div>
@@ -379,5 +389,6 @@
           </div>
         </div>
       </footer> 
+      <script src="../js/news-accordion.js"></script>
 </body>
 </html>
